fix : height overflow

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -74,3 +74,20 @@ button.dark div {
 button.dark div svg {
   margin-left: 5px;
 }
+
+/* utils */
+/* margins */
+.mt-0 {
+  margin-top: 0 !important;
+}
+.ml-1 {
+  margin-left: 7px;
+}
+
+/* paddings */
+.pt-0 {
+  padding-top: 0 !important;
+}
+.pt-1 {
+  padding-top: 7px;
+}
